--- a/app/src/main/res/layout/activity_edit_assessment.xml
+++ b/app/src/main/res/layout/activity_edit_assessment.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/lightPink"
     tools:context=".EditAssessmentActivity">
 
     <TextView
@@ -13,6 +14,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="11dp"
+        android:fontFamily="@font/nunito_sans"
         android:text="@string/title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
+        android:fontFamily="@font/nunito_sans"
         android:ems="10"
         android:hint="@string/assessment_name"
         android:inputType="textPersonName"
@@ -36,6 +39,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="25dp"
+        android:fontFamily="@font/nunito_sans"
         android:text="@string/due"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title" />
@@ -46,6 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
+        android:fontFamily="@font/nunito_sans"
         android:ems="10"
         android:hint="@string/date_hint"
         android:inputType="textPersonName"
@@ -59,6 +64,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/nunito_sans"
         android:text="@string/choose_type_of_assessment"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/due_date" />
@@ -70,6 +76,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/nunito_sans"
         android:background="@android:drawable/btn_dropdown"
         android:spinnerMode="dropdown"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,6 +87,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
+        android:fontFamily="@font/nunito_sans"
+        android:backgroundTint="@color/teenyGreen"
         android:text="@string/button_save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -92,6 +101,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginBottom="16dp"
+        android:fontFamily="@font/nunito_sans"
+        android:backgroundTint="@color/teenyGreen"
         android:text="@string/delete"
         android:onClick="DeleteAssessment"
         app:layout_constraintBottom_toBottomOf="parent"
