--- a/app/src/main/res/layout/content_assessment.xml
+++ b/app/src/main/res/layout/content_assessment.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/lightPink"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".AssessmentActivity"
     tools:showIn="@layout/activity_assessment">
@@ -30,6 +31,7 @@
         android:layout_marginLeft="90dp"
         android:layout_marginBottom="30dp"
         android:text="@string/add_assessment"
+        android:fontFamily="@font/nunito_sans"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
