--- a/app/src/main/res/layout/content_term_screen.xml
+++ b/app/src/main/res/layout/content_term_screen.xml
@@ -17,6 +17,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:background="@color/lightPink"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -28,10 +29,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/ic_add_black_24dp"
+        app:backgroundTint="@color/teenyGreen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        />
+        app:srcCompat="@drawable/ic_add_black_24dp" />
 
     <TextView
         android:id="@+id/textView3"
@@ -41,8 +42,23 @@
         android:layout_marginRight="40dp"
         android:layout_marginBottom="35dp"
         android:text="@string/add_term"
+        app:fontFamily="@font/nunito_sans"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/fab" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="150sp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="20dp"
+        android:background="@color/teenyGreen"
+        android:onClick="launchStudy"
+        android:text="@string/study_sessions"
+        android:fontFamily="@font/nunito_sans"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
