--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android=
     "http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/textView"
+        style="@style/text_view_style"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/text_view_style"
+        app:fontFamily="@font/nunito_sans"
         tools:text="placeholder text" />
 </LinearLayout>
